Added option to choose department

--- a/index.html
+++ b/index.html
@@ -5,7 +5,11 @@
     <title>vue-widget</title>
   </head>
   <body>
-  <script src="https://dev.textinbulk.com/app/public/widget.min.js" id="tib_widget"></script>
-    <script src="/dist/widget.min.js" id="tib-widget" data-uuid="abc40ed5-d1e3-46c0-b0df-f4eeb3303b86"></script>
+  	<script src="http://3c.local" id="tib_widget"></script>
+    <script src="/dist/widget.min.js" id="tib-widget" data-uuid="HFQzyG7F48AhHL3W"></script>
+
+    <!-- <script src="https://dev.textinbulk.com/app/public/widget.min.js" id="tib_widget"></script>
+    <script src="/dist/widget.min.js" id="tib-widget" data-uuid="abc40ed5-d1e3-46c0-b0df-f4eeb3303b86"></script> -->
+    
   </body>
 </html>
