--- a/public/index.html
+++ b/public/index.html
@@ -1,14 +1,1 @@
-<!doctype html>
-<html lang="en">
-<head>
-  <meta charset="utf-8">
-  <title>TM | SMS</title>
-  <base href="/">
-
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
-</head>
-<body>
-  <app-root></app-root>
-<script type="text/javascript" src="inline.bundle.js"></script><script type="text/javascript" src="polyfills.bundle.js"></script><script type="text/javascript" src="styles.bundle.js"></script><script type="text/javascript" src="vendor.bundle.js"></script><script type="text/javascript" src="main.bundle.js"></script></body>
-</html>
+<!doctype html><html lang="en"><head><meta charset="utf-8"><title>TM | SMS</title><base href="/"><meta name="viewport" content="width=device-width,initial-scale=1"><link rel="icon" type="image/x-icon" href="favicon.ico"><link href="styles.69c549f10f4622eccc4e.bundle.css" rel="stylesheet"/></head><body><app-root></app-root><script type="text/javascript" src="inline.c5749cc2306a32db3647.bundle.js"></script><script type="text/javascript" src="polyfills.d37bb876aa95aa63e189.bundle.js"></script><script type="text/javascript" src="vendor.f9ed4d3b02b5b6c03fbf.bundle.js"></script><script type="text/javascript" src="main.3b27fe2020037641e161.bundle.js"></script></body></html>
