--- a/public/index.html
+++ b/public/index.html
@@ -1,1 +1,13 @@
-<!doctype html><html lang="en"><head><meta charset="utf-8"><title>TM | SMS</title><base href="/"><meta name="viewport" content="width=device-width,initial-scale=1"><link rel="icon" type="image/x-icon" href="favicon.ico"><link href="styles.f8c2d1e75def725bad02.bundle.css" rel="stylesheet"/></head><body><app-root></app-root><script type="text/javascript" src="inline.d49c75bf28538779f53d.bundle.js"></script><script type="text/javascript" src="polyfills.f76b8ced775fc58473c1.bundle.js"></script><script type="text/javascript" src="vendor.3e7f1211fd82bc384a1a.bundle.js"></script><script type="text/javascript" src="main.f6cdc7117143786d2eda.bundle.js"></script></body></html>
+<!doctype html>
+<html lang="en">
+<head>
+    <meta charset="utf-8">
+    <title>TM | SMS</title>
+    <base href="/">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
+</head>
+<body>
+<app-root></app-root>
+<script type="text/javascript" src="inline.bundle.js"></script><script type="text/javascript" src="polyfills.bundle.js"></script><script type="text/javascript" src="styles.bundle.js"></script><script type="text/javascript" src="vendor.bundle.js"></script><script type="text/javascript" src="main.bundle.js"></script></body>
+</html>
