--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
     <title>vue-widget</title>
   </head>
   <body>
-    <script src="/dist/widget.min.js" id="tib-widget" data-uuid="iTWY7r5PHSm5emUf"></script>
+    <script src="/dist/widget.min.js" id="tib-widget" data-uuid="bW8Cc2UXuSwWeVJp"></script>
   </body>
 </html>
