--- a/public/index.html
+++ b/public/index.html
@@ -1,19 +1,1 @@
-<!doctype html>
-<html lang="en">
-<head>
-    <meta charset="utf-8">
-    <title>TM | SMS</title>
-    <base href="/">
-    <meta name="viewport" content="width=device-width,initial-scale=1">
-    <link rel="icon" type="image/x-icon" href="favicon.ico">
-    <link href="styles.28c8b315181bea570685.bundle.css" rel="stylesheet"/>
-</head>
-<body>
-<app-root></app-root>
-<script type="text/javascript" src="inline.72d59d47e3f65369a012.bundle.js"></script>
-<script type="text/javascript" src="polyfills.8a07cf6c3066401801c0.bundle.js"></script>
-<script type="text/javascript" src="vendor.a9c7cdaea2a3893fe3e3.bundle.js"></script>
-<script type="text/javascript" src="main.bb37cf7cd7a3fe80f769.bundle.js"></script>
-</body>
-</html>
-
+<!doctype html><html lang="en"><head><meta charset="utf-8"><title>TM | SMS</title><base href="/"><meta name="viewport" content="width=device-width,initial-scale=1"><link rel="icon" type="image/x-icon" href="favicon.ico"><link href="styles.28c8b315181bea570685.bundle.css" rel="stylesheet"/></head><body><app-root></app-root><script type="text/javascript" src="inline.72d59d47e3f65369a012.bundle.js"></script><script type="text/javascript" src="polyfills.8a07cf6c3066401801c0.bundle.js"></script><script type="text/javascript" src="vendor.a9c7cdaea2a3893fe3e3.bundle.js"></script><script type="text/javascript" src="main.bb37cf7cd7a3fe80f769.bundle.js"></script></body></html>
