--- a/public/index.html
+++ b/public/index.html
@@ -1,13 +1,1 @@
-<!doctype html>
-<html lang="en">
-<head>
-    <meta charset="utf-8">
-    <title>TM | SMS</title>
-    <base href="/">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="icon" type="image/x-icon" href="favicon.ico">
-</head>
-<body>
-<app-root></app-root>
-<script type="text/javascript" src="inline.bundle.js"></script><script type="text/javascript" src="polyfills.bundle.js"></script><script type="text/javascript" src="styles.bundle.js"></script><script type="text/javascript" src="vendor.bundle.js"></script><script type="text/javascript" src="main.bundle.js"></script></body>
-</html>
+<!doctype html><html lang="en"><head><meta charset="utf-8"><title>TM | SMS</title><base href="/"><meta name="viewport" content="width=device-width,initial-scale=1"><link rel="icon" type="image/x-icon" href="favicon.ico"><link href="styles.4c7988a903359f70292e.bundle.css" rel="stylesheet"/></head><body><app-root></app-root><script type="text/javascript" src="inline.fcc311e6a41a17da47be.bundle.js"></script><script type="text/javascript" src="polyfills.8a07cf6c3066401801c0.bundle.js"></script><script type="text/javascript" src="vendor.a9c7cdaea2a3893fe3e3.bundle.js"></script><script type="text/javascript" src="main.51294e8a484f1e0b6810.bundle.js"></script></body></html>
