--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <title>vue-widget</title>
   </head>
   <body>
-  <script src="https://dev.textinbulk.com/app/public/widget.min.js" id="tib_widget"></script>
-    <script src="/dist/widget.min.js" id="tib-widget" data-uuid="abc40ed5-d1e3-46c0-b0df-f4eeb3303b86 "></script>
+    <script src="/dist/widget.min.js" id="tib-widget" data-uuid="bW8Cc2UXuSwWeVJp"></script>
   </body>
 </html>
